# OpenarmIL

./: README.md
openarm_can/: CMakeLists.txt  check_damiao_feedback.py
openarm_can/.github/workflows/: test.yaml
openarm_can/examples/: demo.cpp
openarm_can/scripts/: analyze_pm_xout_validation.py  postprocess_pinn_raw.py
openarm_can/setup/: openarm-can-zero-position-calibration
openarm_can/tools/: openarm_can_probe.py
openarm_controller/: package.xml  setup.py
openarm_controller/config/: teleop_params.yaml
openarm_controller/launch/: teleop_real.launch.py  teleop_sim.launch.py
openarm_controller/openarm_controller/: ik_solver.py  teleop_core.py  teleop_node.py  weighted_filter.py
openarm_description/assets/robot/openarm_v1.0/config/arm/: control_gains.yaml
openarm_description/assets/robot/openarm_v1.0/urdf/: openarm_v10_bimanual.urdf  openarm_v10_bimanual_control.urdf  openarm_v10_bimanual_openarmx_compat.urdf  openarm_v10_bimanual_openarmx_compat_sim.urdf  openarm_v10_bimanual_sim.urdf
openarm_description/rviz/: bimanual.rviz
openarm_human_demo/: .gitignore  README.md  package.xml  setup.cfg  setup.py
openarm_human_demo/launch/: human_data_collection.launch.py
openarm_human_demo/openarm_human_demo/: episode_writer.py  recorder_node.py
openarm_human_demo/scripts/: hamer_extract_npz.py
openarm_human_demo/test/: test_episode_writer.py  test_recorder_node_keys.py
openarm_il/: README.md  package.xml  pyproject.toml  setup.cfg  setup.py
openarm_il/config/: camera_topics.yaml  dataset_schema.yaml  hand_pose.yaml  human_rgb_collection.yaml  pseudo_generation.yaml  real_collection.yaml  retargeting.yaml
openarm_il/docs/: ACT_TRAINING_NOTES.md  DATA_COLLECTION.md  HAND_POSE_FORMAT.md  HUMAN_RGB_COLLECTION.md  LEROBOT_SCHEMA.md  PSEUDO_DEMONSTRATION.md  RETARGETING.md
openarm_il/launch/: collect_real_demo.launch.py  human_camera_bringup.launch.py  robot_camera_bringup.launch.py  robot_data_collection.launch.py  wrist_realsense.launch.py
openarm_il/openarm_il/: __init__.py  action_reader.py  camera_reader.py  collect_real_demo.py  config.py  convert_to_lerobot.py  episode_writer.py  extract_hand_pose.py  fk_solver.py  generate_pseudo_demo.py  gripper_mapping.py  hand_pose_interface.py  hand_pose_loader.py  hand_pose_schema.py  human_rgb_recorder.py  ik_solver.py  inspect_topics.py  lerobot_exporter.py  pseudo_generator.py  pseudo_validator.py  pseudo_visualization.py  pseudo_writer.py  quality_metrics.py  record_human_rgb.py  retargeting.py  robot_data_recorder.py  robot_state_reader.py  schema.py  sync_buffer.py  teleop_episode_writer.py  validate_dataset.py  validate_pseudo_demo.py  validator.py  visualization.py  visualize_episode.py  visualize_pseudo_episode.py
openarm_il/scripts/: collect_real_demo.py  convert_to_lerobot.py  extract_hand_pose.py  generate_pseudo_demo.py  inspect_topics.py  record_human_rgb.py  validate_dataset.py  validate_pseudo_demo.py  visualize_episode.py  visualize_pseudo_episode.py
openarm_il/tests/: test_episode_writer.py  test_gripper_mapping.py  test_hand_pose_schema.py  test_lerobot_exporter.py  test_pseudo_generation.py  test_quality_metrics.py  test_retargeting.py  test_robot_data_recorder_keys.py  test_schema.py  test_sync_buffer.py  test_teleop_episode_writer.py  test_validator.py
openarm_ros2/openarm_bringup/config/controllers/: openarm_bimanual_controllers.yaml  openarm_bimanual_controllers_vr_teleop.yaml
openarm_ros2/openarm_bringup/launch/: openarm.bimanual.launch.py
openarm_ros2/openarm_hardware/include/openarm_hardware/: openarm_simple_hardware.hpp
openarmx_description/: package.xml
openarmx_description/meshes/arm/v10/collision/: link0_symp.stl  link4_symp.stl  link7_symp.stl
openarmx_description/meshes/arm/v10/visual/: link2.stl  link3.stl
openarmx_description/urdf/body/: openarmx_body_macro.xacro
openarmx_description/urdf/robot/: openarmx_robot.urdf
openarmx_teleop_vr/: README.md  README_CN.md
openarmx_teleop_vr/openarmx_teleop_bridge_vr/: CMakeLists.txt  README_CN.md  package.xml
openarmx_teleop_vr/openarmx_teleop_bridge_vr/src/: openarmx_teleop_bridge_vr_node.cpp
openarmx_teleop_vr/openarmx_teleop_vr/: README.md  README_CN.md  package.xml  setup.cfg  setup.py
openarmx_teleop_vr/openarmx_teleop_vr/config/: openarmx_sim_controllers.yaml  sim_controllers.yaml
openarmx_teleop_vr/openarmx_teleop_vr/launch/: openarm_controller_real.launch.py  openarm_teleop_vr_real.launch.py  openarmx_teleop_vr_sim.launch.py  teleop_vr.launch.py  teleop_vr_sim.launch.py
openarmx_teleop_vr/openarmx_teleop_vr/openarmx_teleop_vr/: __init__.py
openarmx_teleop_vr_apk/: README.md  README_CN.md
src/openarm_can/.github/workflows/: package.yaml
src/openarm_can/setup/: openarm_pinn_data_logger.cpp
src/openarm_controller/: setup.cfg
src/openarm_description/assets/robot/openarm_v2.0/config/arm/control/: control_gains.yaml
src/openarm_ros2/openarm_bimanual_moveit_config/config/openarm_v2.0/: moveit_controllers.yaml  openarm_bimanual.srdf
src/openarmx_description/meshes/arm/v10/collision/: link5_symp.stl  link6_symp.stl
src/openarmx_description/meshes/arm/v10/visual/: link1.stl
src/openarmx_teleop_vr/openarmx_teleop_bridge_vr/: README.md
src/openarmx_teleop_vr/openarmx_teleop_vr/config/: teleop_params.yaml
src/openarmx_teleop_vr/openarmx_teleop_vr/launch/: openarm_teleop_vr_sim.launch.py
src/openarmx_teleop_vr/openarmx_teleop_vr/openarmx_teleop_vr/: openarmx_teleop_vr_node.py
src/openarmx_teleop_vr/openarmx_teleop_vr/scripts/: joint_name_remapper.py
